--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,22 +6,16 @@ project(Rendering
         LANGUAGES CXX C
 )
 
-find_package(CUDA REQUIRED)
-# set(CMAKE_CUDA_ARCHITECTURES 61)
-
-# find the vsg
 if (VULKAN_SDK)
     set(ENV{VULKAN_SDK} ${VULKAN_SDK})
     set(ENV{VK_SDK_PATH} ${VULKAN_SDK})
 endif()
 
+set(CMAKE_CXX_COMPILER "/usr/bin/g++")
 
-# set the use of C++17 globally as all examples require it
-set(CMAKE_CXX_STANDARD 17)
-aux_source_directory(src SRCS)
+find_package(CUDA REQUIRED)
+# set(CMAKE_CUDA_ARCHITECTURES 61)
 
-add_executable(Rendering ${SRCS})
-add_subdirectory(asset)
 add_subdirectory(thirdParty/vsg)
 add_subdirectory(thirdParty/vsgImGui)
 
@@ -34,6 +28,24 @@ set(ASSIMP_BUILD_PLY_EXPORTER TRUE)
 set(ASSIMP_BUILD_TESTS FALSE)
 add_subdirectory(thirdParty/assimp)
 
+# set the use of C++17 globally as all examples require it
+set(CMAKE_CXX_STANDARD 17)
+aux_source_directory(src SRCS)
+
+add_executable(Rendering ${SRCS})
+add_subdirectory(asset)
+
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/FlatBuffers/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/refactor
+    ${CMAKE_SOURCE_DIR}/thirdParty/vsg/include
+    ${CMAKE_SOURCE_DIR}/thirdParty/stb_image/include
+    ${CMAKE_SOURCE_DIR}/thirdParty/vsgImGui/include
+    ${CMAKE_SOURCE_DIR}/thirdParty/assimp/include
+)
+
 target_include_directories(Rendering PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
@@ -42,17 +54,13 @@ target_link_directories(Rendering PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/Video_Codec_SDK_12.0.16/Lib/linux/stubs/x86_64
 )
 
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/thirdParty/FlatBuffers/include
-    ${CMAKE_SOURCE_DIR}/thirdParty/stb_image/include
-    ${CMAKE_SOURCE_DIR}/thirdParty/vsgImGui/include
-    ${CMAKE_SOURCE_DIR}/thirdParty/assimp/include
-)
 
-target_link_libraries(Rendering 
+target_link_libraries(Rendering
+    assimp 
     vsg::vsg 
     flatbuffers
     vsgRenderer
+    vsgImGui
     libnvcuvid.so libnvidia-encode.so ${CUDA_CUDA_LIBRARY})
 
 get_target_property(Rendering_include_dirs Rendering INTERFACE_INCLUDE_DIRECTORIES)
