--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.7)
 project(Rendering
         VERSION 1.1.0
         DESCRIPTION "Set of example programs that test and illustrate how to use the VulkanSceneGraph"
-        LANGUAGES CXX C
+        LANGUAGES CXX C CUDA
 )
 
 find_package(CUDA REQUIRED)
