优化了copyimage的代码,创建窗口会随机出现问题,暂时没有解决,depth_fix还是用的cpu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ target_link_directories(Rendering PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/asset/thirdParty/CADDataManager/Lib/
 )
 
-target_link_libraries (${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/asset/thirdParty/CADDataManager/Lib/cadDataManager.a libcurl.a)
+target_link_libraries (${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/asset/thirdParty/CADDataManager/Lib/cadDataManager.a ${CMAKE_CURRENT_SOURCE_DIR}/asset/thirdParty/CADDataManager/Lib/libcurl.a)
 
 target_link_libraries(Rendering 
     vsg::vsg
